changes for class validator

--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "@angular/platform-browser": "~11.0.0",
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
-    "class-validator": "^0.13.1",
     "font-awesome": "^4.7.0",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
