--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,9 @@
               "src/favicon.ico",
               "src/assets"
             ],
+            "allowedCommonJsDependencies": [
+              "lodash"
+            ],
             "styles": [
               "src/styles.css",
               "node_modules/font-awesome/css/font-awesome.css",
