--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.0.0",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.21",
+    "ngx-bootstrap": "^6.2.0",
     "ngx-spinner": "^11.0.1",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
