add behaviorSubject for login

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "modules",
         "ngx",
         "node",
+        "swal",
+        "sweetalert",
         "titlecase",
         "toastr"
     ]
