--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.21",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-cookie-service": "^12.0.0",
     "ngx-spinner": "^11.0.1",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
