--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "ngx-spinner": "^11.0.1",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
-    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.0.16",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
