--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.0.0",
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
+    "angular-user-idle": "^2.2.6",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.21",
     "ngx-bootstrap": "^6.2.0",
